fixed content resizing when input too large

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -99,6 +99,7 @@ button.disabled,button.disabled:hover,button.disabled:active {
 }
 .chatform {
     display: flex;
+    width: 60%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
